<resources>
    <string name="app_name">eMedic</string>
    <string name="emedic_splash_screen">eMedic Splash Screen</string>
    <string name="connecting_text">Connecting to Server...</string>
    <string name="emedic_text">eMedic</string>
    <string name="emedic_logo_description">eMedic Logo</string>
    <string name="username_or_email_text">Username or Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">forgot password?</string>
    <string name="dont_have_an_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="signup_text">Sign Up</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="phone_number_text">Phone number</string>
    <string name="gender_text">Gender</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="back_to_login_text">Back to Login</string>
    <string name="title_activity_services">Services</string>
    <string name="title_services">Services</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="photo_placeholder_text">photo placeholder</string>
    <string name="upload_photo_text">Upload photo</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="other_names_text">Other Names</string>
    <string name="address_text">Address</string>
    <string name="title_biodata">Bio-data</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="blood_group_text">Blood Group</string>
    <string name="disability_text">Disability</string>
    <string name="genotype_text">Genotype</string>
    <string name="marital_status_text">Marital Status</string>
    <string name="weight_text">Weight(kg)</string>
    <string name="medical_issues_text">Medical Issues</string>
    <string name="details_text">Details</string>
    <string name="phone_text">Phone Number</string>
    <string name="logout_text">Logout</string>
    <string name="no_service_found_text">No Service Found!</string>
    <string name="cancel_request_text">Cancel Request</string>
    <string name="send_request_text">Send Request</string>
    <string name="at_symbol">\@</string>
    <string name="my_current_location">My Current Location</string>
    <string name="home_address_text">My Home Address</string>
    <string name="alternative_address_text">Alternative Address</string>
    <string name="additional_information_text">Additional Information</string>
    <string name="specialist_text">Specialist</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
</resources>
